--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
   <body></body>
 
-  <script
+  <!-- <script
     language="javascript"
     type="text/javascript"
     src="./libraries/tone.js"
-  ></script>
+  ></script> -->
+  <script
+      type="text/javascript"
+      src="https://gogul09.github.io/js/tone.js"
+    ></script>
   <script language="javascript" type="text/javascript" src="index.js"></script>
 </html>
